# client

./: .gitignore  CMakeLists.txt  installer.nsi
.github/workflows/: ci.yml
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_bg.xml
android/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/res/values/: themes.xml
android/res/values-v31/: themes.xml
android/src/com/bsfchat/client/: BSFChatActivity.java  MediaProjectionService.java  ScreenCaptureHelper.java  SyncService.java  VoiceService.java
branding/: BSFChat.icns  generate_icons.py
cmake/: Dependencies.cmake  ios.toolchain.cmake  patch-plog.cmake
docs/design/: BSFChat.html  README.md  SPEC.md  Theme.qml  qmldir  tokens.json
docs/design/fonts/: README.md
ios/: Info.plist
qml/: main.qml
qml/components/: ChannelList.qml  ChannelSettings.qml  ClientSettings.qml  EmojiPicker.qml  ForwardDialog.qml  Icon.qml  ImageViewer.qml  InfoBanner.qml  LinkPreview.qml  LoginDialog.qml  MemberList.qml  MessageBubble.qml  MessageInput.qml  MessageView.qml  ParticipantTile.qml  RoleAssignPopup.qml  SearchPopup.qml  ServerSettings.qml  ServerSidebar.qml  ShortcutsDialog.qml  StatusPicker.qml  ThemedCheckBox.qml  ThemedComboBox.qml  ThemedScrollBar.qml  ThemedSlider.qml  ThemedSwitch.qml  ThreadPanel.qml  ToastHost.qml  UserProfileCard.qml  UserSettings.qml  VideoPlayerCard.qml  VoiceDock.qml  VoicePanel.qml  VoiceRoom.qml
qml/data/: EmojiData.js
qml/mobile/: MobileMain.qml
qml/theme/: Theme.qml
scripts/: build-ios.sh  build-openssl-android.sh  build-openssl-ios.sh  setup-dev-signing.sh
src/: main.cpp
src/core/: AndroidNotifier.cpp  AndroidNotifier.h  AndroidPermissions.cpp  AndroidPermissions.h  App.cpp  App.h  Haptics.cpp  Haptics.h  MediaDownloader.cpp  MediaDownloader.h  NotificationManager.cpp  NotificationManager.h  Settings.cpp  Settings.h  TintedIconProvider.cpp  TintedIconProvider.h  UrlHandler.cpp  UrlHandler.h
src/identity/: IdentityApiClient.cpp  IdentityApiClient.h  IdentityClient.cpp  IdentityClient.h
src/model/: MemberListModel.cpp  MemberListModel.h  MessageModel.cpp  MessageModel.h  RoomListModel.cpp  RoomListModel.h  ServerListModel.cpp  ServerListModel.h
src/net/: MatrixClient.cpp  MatrixClient.h  ServerConnection.cpp  ServerConnection.h  ServerManager.cpp  ServerManager.h  SyncLoop.cpp  SyncLoop.h
src/store/: LocalCache.cpp  LocalCache.h
src/util/: MarkdownParser.cpp  MarkdownParser.h
src/voice/: AndroidAudioRouting.cpp  AndroidAudioRouting.h  AndroidScreenShareController.cpp  AndroidScreenShareController.h  AudioEngine.cpp  AudioEngine.h  AudioMixer.cpp  AudioMixer.h  CameraController.cpp  CameraController.h  MacCameraCapturer.h  MacCameraCapturer.mm  MacCameraPermission.h  MacCameraPermission.mm  MacScreenCapturer.h  MacScreenCapturer.mm  NotificationSounds.cpp  NotificationSounds.h  PeerConnectionManager.cpp  PeerConnectionManager.h  ScreenShareController.cpp  ScreenShareController.h  SoundGenerator.cpp  SoundGenerator.h  VoiceEngine.cpp  VoiceEngine.h
tests/: CMakeLists.txt  test_models.cpp
